--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,3 +1,8 @@
-.layout{ 
-    
+.layout__content{ 
+    background: #FFFFFF;
+    padding-bottom: 45px;
+}
+.layout{
+    max-width: 1340px;
+    margin: 30px auto;
 }
