--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
     --border-r-16: 16px;
     --black-primary: #030303;
     --blue-primary: #1D64EC;
+    --blue-hover: #6396f7;
     --grey-light: #F8F8F8;
     --grey-text: #858585;
     --grey-divider: #DEDEDE;
@@ -17,6 +18,7 @@
     --border-r-20: 20px;
     --border-r-16: 16px;
     --border-r-32: 32px;
+    --border-r-24: 24px;
 
     --fsize-md: 14px;
     --fsize-mdl: 15px;
