--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,7 +12,7 @@ html {
 }
 body {
     scroll-behavior: smooth;
-    font-family: 'Prompt', sans-serif;
+    font-family: 'Geologica', sans-serif;
     background: var(--grey-allbg);
     color: var(--black-primary);
 }
