--- a/src/components/UI/misc/Rating/Rating.module.scss
+++ b/src/components/UI/misc/Rating/Rating.module.scss
@@ -30,8 +30,8 @@
         color: var(--yellow-text);
     }
     &__warn{
-        background: var(--green-light);
-        color: var(--green-text);
+        background: var(--red-light);
+        color: var(--red-text);
     }
 }
 .title{
