--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,8 @@
     --border-r-16: 16px;
     --black-primary: #030303;
     --blue-primary: #1D64EC;
-    --blue-hover: #6396f7;
+    --blue-primary-30: #1d65ec5b;
+    --blue-hover: #2974ff;
     --grey-light: #F8F8F8;
     --grey-text: #858585;
     --grey-divider: #DEDEDE;
@@ -13,6 +14,9 @@
 
     --yellow-text: #E1A200;
     --yellow-light:#FFF8D3;
+
+    --red-text: #e10000;
+    --red-light:#ffd3d3;
 
     --border-r-full: 100px;
     --border-r-20: 20px;
@@ -27,4 +31,5 @@
     --fsize-lg: 22px;
     --fsize-sm: 12px;
     --fsize-19: 19px;
+    --fsize-xxl: 96px;
 }
