--- a/src/pages/HotelPage/HotelPage.module.scss
+++ b/src/pages/HotelPage/HotelPage.module.scss
@@ -1,20 +1,20 @@
 @import "@/styles/mixins";
 
-.container{
+.container {
     @include container;
 }
 
-.hotel{
+.hotel {
     border-top: 1px solid var(--grey-divider);
-    &__back{
+    &__back {
         margin: 20px 0 15px;
     }
     &__photo {
-        &s__grid{
+        &s__grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(2, 167px); 
-            grid-gap: 15px; 
+            grid-template-rows: repeat(2, 167px);
+            grid-gap: 15px;
             width: 100%;
         }
         width: 100%;
@@ -25,21 +25,21 @@
             object-position: center;
             border-radius: var(--border-r-16);
         }
-        &:nth-child(1){
+        &:nth-child(1) {
             grid-area: 1 / 1 / 3 / 3;
             & > img {
                 border-radius: var(--border-r-24);
             }
         }
     }
-    &__description_grid{
+    &__description_grid {
         display: grid;
         grid-template-columns: 1fr max-content;
         align-items: center;
         margin: 20px 0 30px;
     }
-    &__nav{
-        &bar{
+    &__nav {
+        &bar {
             display: flex;
             gap: 25px;
             border-bottom: 1px solid var(--grey-divider);
@@ -47,21 +47,25 @@
         border-bottom: 1px solid rgba(255, 255, 255, 0);
         padding: 5px 15px;
         transition: 0.2s ease;
-        &_active{
+        &_active {
             color: var(--blue-primary);
             border-bottom: 2px solid var(--blue-primary);
         }
     }
+    &__reviews{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
-
-.overview{
-    &__title{
+.overview {
+    &__title {
         margin: 20px 0 10px;
     }
 }
-.service{
-    &__grid{
+.service {
+    &__grid {
         display: grid;
         grid-auto-flow: column;
         margin-top: 10px;
@@ -73,14 +77,37 @@
         grid-template-rows: repeat(4, 1fr);
     }
 }
-.rooms{
+.rooms {
     padding: 20px 0 30px;
     background: var(--grey-light);
+    &__grid {
+        margin: 15px 0 30px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 15px;
+    }
 }
-.reviews{
-    padding: 20px 0 20px;
+.reviews {
+    padding: 20px 0;
+    &__grid {
+        margin: 20px 0;
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
 }
-.section__title{
+.section__title {
     font-size: var(--fsize-20);
     font-weight: 500;
+}
+.rating {
+    &__total {
+        @include flex-centered;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+        height: 100%;
+        color: var(--blue-primary);
+    }
+    font-size: var(--fsize-xxl);
+    font-weight: 100;
 }
