--- a/src/components/UI/buttons/GoBackButton/GoBackButton.module.scss
+++ b/src/components/UI/buttons/GoBackButton/GoBackButton.module.scss
@@ -2,9 +2,10 @@
 
 .back__btn{
     @include flex-centered;
-    padding: 10px;
+    gap: 10px;
+    padding: 12px;
     border-radius: var(--border-r-full);
-    background: rgba(0, 0, 0, 0);
+    background: #fff;
     transition: 0.2s ease;
     & >svg > path {
         transition: 0.1s;}
@@ -13,6 +14,7 @@
     }
     &:hover{
         background: var(--grey-divider);
+        color: #fff;
     }
     
 }
