--- a/src/components/UI/misc/Rating/Rating.module.scss
+++ b/src/components/UI/misc/Rating/Rating.module.scss
@@ -9,6 +9,7 @@
         display: grid;
         grid-template-columns: max-content 1fr;
         column-gap: 7px;
+        align-items: center;
         &__title{
             font-style: normal;
             font-weight: 500;
