--- a/src/components/UI/misc/Rating/Rating.module.scss
+++ b/src/components/UI/misc/Rating/Rating.module.scss
@@ -14,6 +14,7 @@
             font-style: normal;
             font-weight: 500;
             font-size: 15px;
+            
         }
         &__reviews{
             font-style: normal;
@@ -33,7 +34,9 @@
     &__warn{
         background: var(--red-light);
         color: var(--red-text);
+        
     }
+    
 }
 .title{
     &__great{
@@ -43,6 +46,6 @@
         color: var(--yellow-text);
     }
     &__warn{
-        color: var(--green-text);
+        color: var(--red-text);
     }
 }
