--- a/src/pages/HotelManagePage/HotelManagePage.module.scss
+++ b/src/pages/HotelManagePage/HotelManagePage.module.scss
@@ -1,1 +1,42 @@
 @import "@/styles/mixins";
+
+.manage {
+    &__grid {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+    &__nav {
+        margin: 20px 0;
+        padding-bottom: 360px;
+    }
+}
+.nav {
+    &__active{
+        color: var(--blue-primary);
+    }
+    &__title {
+        font-style: normal;
+        font-weight: 500;
+        font-size: var(--fsize-lg);
+    }
+    &__tabs{
+        padding: 20px 0;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+    }
+    &__tab {
+        cursor: pointer;
+        display: flex;
+        width: max-content;
+        font-weight: 300;
+        column-gap: 10px;
+        transition: 0.15s;
+        &:hover {
+            color: var(--blue-primary);
+        }
+    }
+}
+.container {
+    @include container;
+}
