--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -14,6 +14,9 @@
     @include container;
 }
 .nav{
+    &__active{
+        color: var(--blue-primary);
+    }
     &__title{
         font-style: normal;
         font-weight: 500;
