--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,6 +21,7 @@
     --border-r-full: 100px;
     --border-r-20: 20px;
     --border-r-16: 16px;
+    --border-r-8: 8px;
     --border-r-32: 32px;
     --border-r-24: 24px;
 
